--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Dating Agency Hub</title>
 
 <!-- GOOGLE ANALYTICS GA4 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3VB8H63X1N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
