--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+  <!-- Open Graph -->
+<meta property="og:title" content="Watch Private Live">
+<meta property="og:description" content="Review & rekomendasi platform matchmaking terpercaya.">
+<meta property="og:image" content="https://github.com/ic-man/WatchPrivateLive/blob/main/thumbnail.jpg">
+<meta property="og:url" content="https://ic-man.github.io/Biolink/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Dating Agency Hub">
+<meta name="twitter:description" content="Review & rekomendasi platform matchmaking terpercaya.">
+<meta name="twitter:image" content="https://github.com/ic-man/WatchPrivateLive/blob/main/thumbnail.jpg">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dating Agency Hub</title>
+<title>Watch Private Live</title>
 
 <!-- GOOGLE ANALYTICS GA4 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3VB8H63X1N"></script>
@@ -72,12 +84,12 @@ a:hover{
 
   <img src= "https://i.ibb.co.com/FkYsW3hV/Gambar-JPEG.jpg" alt="Dating Agency">
 
-  <h1>Dating Agency Hub</h1>
+  <h1>Welcome Private Live</h1>
   <p>Find real connections. Trusted dating guidance & resources.</p>
 
   <a href="https://datingagencyhub.blogspot.com/?m=1"
      onclick="gtag('event','click',{'event_category':'biolink','event_label':'dating_agency_main'});">
-     💖 Visit Dating Agency
+     📸 Watch Private Live
   </a>
 
   <div class="footer">
