--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- Open Graph -->
 <meta property="og:title" content="Watch Private Live">
-<meta property="og:description" content="Review & rekomendasi platform matchmaking terpercaya.">
+<meta property="og:description" content="Live Private Call & Get My Number">
 <meta property="og:image" content="https://github.com/ic-man/WatchPrivateLive/blob/main/thumbnail.jpg">
 <meta property="og:url" content="https://ic-man.github.io/Biolink/">
 <meta property="og:type" content="website">
@@ -11,7 +11,7 @@
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Dating Agency Hub">
-<meta name="twitter:description" content="Review & rekomendasi platform matchmaking terpercaya.">
+<meta name="twitter:description" content="Live Private Call & Get My Number">
 <meta name="twitter:image" content="https://github.com/ic-man/WatchPrivateLive/blob/main/thumbnail.jpg">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
