--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ a:hover{
   <img src= "https://i.ibb.co.com/FkYsW3hV/Gambar-JPEG.jpg" alt="Dating Agency">
 
   <h1>Welcome Private Live</h1>
-  <p>Find real connections. Trusted dating guidance & resources.</p>
+  <p>Live Private Call & Get My Number</p>
 
   <a href="https://datingagencyhub.blogspot.com/?m=1"
-     onclick="gtag('event','click',{'event_category':'biolink','event_label':'dating_agency_main'});">
+     onclick="gtag('event','click',{'event_category':'Watch Private Live','event_label':'dating_agency_main'});">
      📸 Watch Private Live
   </a>
 
