--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <meta property="og:title" content="Watch Private Live">
 <meta property="og:description" content="Live Private Call & Get My Number">
 <meta property="og:image" content="https://raw.githubusercontent.com/ic-man/WatchPrivateLive/main/thumbnail.jpg">
-<meta property="og:url" content="https://ic-man.github.io/Biolink/">
+<meta property="og:url" content="https://ic-man.github.io/Watch Private Live/">
 <meta property="og:type" content="website">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Dating Agency Hub">
+<meta name="twitter:title" content="Watch Private Live">
 <meta name="twitter:description" content="Live Private Call & Get My Number">
 <meta name="twitter:image" content="https://raw.githubusercontent.com/ic-man/WatchPrivateLive/main/thumbnail.jpg">
 <meta charset="UTF-8">
